--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	
     <meta http-equiv="description" content="this is my page">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <link rel="stylesheet" href="/build/style.css">
+    <link rel="stylesheet" href="build/bootstrap.min.css">
+    <link rel="stylesheet" href="build/style.css">
   </head>
   
   <body>
