--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html>
   <head>
     <title>test</title>
-	
-    <meta http-equiv="description" content="this is my page">
+
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <link rel="stylesheet" href="build/bootstrap.min.css">
+    <link rel="stylesheet" href="static/bootstrap.min.css">
     <link rel="stylesheet" href="build/style.css">
   </head>
   
