--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>test</title>
+<head>
+  <title>教学互动平台</title>
 
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <link rel="stylesheet" href="static/bootstrap.min.css">
-    <link rel="stylesheet" href="build/style.css">
-  </head>
-  
-  <body>
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+  <link rel="stylesheet" href="static/bootstrap.min.css">
+  <link rel="stylesheet" href="build/style.css">
+</head>
+
+<body>
   
   <div id="app"></div>
-   <script src="build/common.js"></script>
-    <script src="build/build.js"></script>
-  </body>
+  <script src="build/common.js"></script>
+  <script src="build/build.js"></script>
+</body>
 </html>
